# kaori

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: DECISIONS.md  PLAN.md  TODO-agent-integration.md  finance.md  meals.md  patterns.md  profile.md  roadmap.md  weight.md  workout.md
docs/cards/: HOWTO.md  README.md  agent.md  healthkit-workout.md  meal.md  nutrition.md  portfolio.md  post.md  reminder.md  summary.md  weather.md  weight.md  workout.md
kaori/: config.py  database.py  main.py  mcp_server.py
kaori/api/: agent.py  auth.py  document.py  exercise_types.py  feed.py  finance.py  heartbeat.py  meals.py  post.py  profile.py  reminder.py  router.py  summary.py  test_mode.py  timer_presets.py  weather.py  weight.py  workout.py
kaori/llm/: __init__.py  agent_backend.py  base.py  claude_api.py  claude_cli.py  codex_cli.py  prompts.py
kaori/models/: __init__.py  agent.py  card.py  document.py  finance.py  heartbeat.py  llm.py  meal.py  post.py  reminder.py  weather.py  weight.py  workout.py
kaori/services/: agent_chat_service.py  agent_engine.py  agent_service.py  agent_tools.py  document_service.py  feed_service.py  heartbeat_service.py  meal_service.py  post_service.py  (+9 more)
scripts/: compress_photos.py
tests/: conftest.py  mock_llm.py  test_agent_service.py  test_agent_tools.py  test_api_agent.py  test_api_documents.py  test_api_feed.py  test_api_meals.py  test_api_profile.py  test_api_weight.py  test_document_service.py  test_meal_service.py  test_photo_extraction.py  test_portfolio_service.py  test_profile_service.py
(+50 files in other folders)
